@@ -24,6 +24,7 @@
 	* Added a method flushByTags() to the t3lib_cache classes
 	* Added a method addCacheTags() to tslib_fe so that extensions can easily tag cache entries for pages
 	* Added the caching framework in typo3/init.php so that it is available in the BE, too
+	* Added class t3lib_cache to easily initialize the various caches in TYPO3 (cache_pages only for now)
 
 2008-09-23  Martin Kutschker  <masi@typo3.org>
 
